--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-avatar": "^3.10.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
